--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fast-sort": "^3.4.0",
     "next": "14.2.5",
     "postcss": "8.4.40",
+    "prisma": "^5.17.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.7",
