--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "14.2.5",
     "fast-sort": "^3.4.0",
     "next": "14.2.5",
+    "next-cloudinary": "^6.8.0",
     "postcss": "8.4.40",
     "prisma": "^5.17.0",
     "react": "18.3.1",
