--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview-email": "email dev -p 3030"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
+    "@react-email/components": "^0.0.22",
     "@types/node": "22.0.0",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -26,6 +28,7 @@
     "prisma": "^5.17.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-email": "^2.1.6",
     "tailwindcss": "3.4.7",
     "typescript": "5.5.4",
     "zod": "^3.23.8"
