--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-email": "^2.1.6",
+    "resend": "^1.0.0",
     "tailwindcss": "3.4.7",
     "typescript": "5.5.4",
     "zod": "^3.23.8"
