--- a/package.json
+++ b/package.json
@@ -11,31 +11,34 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.17.0",
-    "@react-email/components": "^0.0.22",
-    "@types/node": "22.0.0",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.19",
+    "@prisma/client": "^5.1.1",
+    "@react-email/components": "^0.0.7",
+    "@types/node": "20.4.9",
+    "@types/react": "18.2.19",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.1",
-    "eslint": "9.8.0",
-    "eslint-config-next": "14.2.5",
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.13",
     "fast-sort": "^3.4.0",
-    "next": "14.2.5",
-    "next-auth": "^4.24.7",
-    "next-cloudinary": "^6.8.0",
-    "postcss": "8.4.40",
-    "prisma": "^5.17.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-email": "^2.1.6",
+    "lodash": "^4.17.21",
+    "next": "13.4.13",
+    "next-auth": "^4.23.1",
+    "next-cloudinary": "^4.18.0",
+    "postcss": "8.4.27",
+    "prisma": "^5.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-email": "^1.9.4",
     "resend": "^1.0.0",
-    "tailwindcss": "3.4.7",
-    "typescript": "5.5.4",
-    "zod": "^3.23.8"
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "daisyui": "^4.12.10"
+    "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.197",
+    "daisyui": "^3.5.1",
+    "encoding": "^0.1.13"
   }
 }
